[package]
name = "siggi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.1", features = ["derive"] }
getset = "0.1.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
svg = "0.10.0"
